# sessions2024_main

./: .gitignore  CMakeLists.txt  README.md  camera.csv  closesthit.rchit  depthPrePass.frag  depthPrePass.frag.spv  light.csv  lighting_shader.frag  lighting_shader.frag.spv  lighting_shader.vert  lighting_shader.vert.spv  main.cpp  miss.rmiss  output.csv  raygen.rgen  sample.cpp  sessions2024.blend  sessions2024.blend1  sessions2024_baked.blend  shader.cmd  shader.frag  shader.geom  shader.geom.spv  shader.vert  test2.cpp
